--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,10 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "firebase-admin": "^12.7.0"
   }
 }
