--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "firebase-admin": "^11.11.0",
+    "dotenv": "^16.1.4"
   }
 }
