--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "firebase-admin": "^12.7.0"
+    "firebase-admin": "^12.7.0",
+    "multer": "^2.0.2",
+    "pdf-parse": "^2.4.5"
   }
 }
